# node-osu

./: .gitignore  Cargo.toml  LICENSE  README.md  index.js  mainpage.md  package-lock.json  package.json  tsconfig.json
docs/: CNAME  globals.html  index.html
docs/assets/js/: search.js
docs/classes/: _api_errors_.apierror.html  _api_index_.apiwrapper.html
docs/modules/: _api_errors_.html  _api_index_.html  _index_.html
src/: beatmap.rs  color.ts  index.ts  lib.rs  utils.ts
src/api/: errors.ts  index.ts
src/beatmap/: additions.ts  hitObject.ts  hitsounds.ts  index.ts  structs.ts  timingPoint.ts  utils.ts
src/math/: slider.ts  spline.ts  vector.ts
tests/: serde.ts
tests/files/: 1606067.osu
