[package]
name = "node-osu"
version = "0.0.20"
authors = ["Michael Zhang <mail@mzhang.io>"]
edition = "2018"
description = "General-purpose osu! library."
repository = "https://github.com/iptq/node-osu.git"
license = "MIT"

[profile.release]
lto = true
opt-level = "s"

[package.metadata.wasm-pack.profile.release]
# wasm-opt = ["-Oz", "--enable-mutable-globals"]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
libosu = { version = "0.0.20", features = ["serde"] }
serde = { version = "1.0.120", features = ["derive"] }
wasm-bindgen = { version = "0.2.69", features = ["serde-serialize"] }
wee_alloc = "0.4.5"
